recipe comp. implementation

--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,1 +1,8 @@
-<p>recipes works!</p>
+
+<div class="grid-container">
+    <figure *ngFor="let r of records">
+        <img [src]="r.image" />
+        <h5>{{r.name}}</h5>
+        <p>{{r.instruction}}</p>
+    </figure>
+</div>
