fix an issue with the search input event binding

--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,5 +1,5 @@
 
-<input type="text" name="term" [(ngModel)]="searchTerm" (change)="search()" placeholder="Search ..."/>
+<input type="text" name="term" [(ngModel)]="searchTerm" (keyup)="search()" placeholder="Search ..."/>
 
 <div class="grid-container">
     <figure *ngFor="let r of records">
